force-app/main/default/objects/ucinn_ascendv2__Global_Matching__c/ucinn_ascendv2__Global_Matching__c.object-meta.xml
<CustomObject>
    <description>Creating global matching for a specific matching rule</description>
    <label>Global Matching</label>
    <nameField>
        <label>Global Matching Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Matchings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>