force-app/main/default/objects/ucinn_ascendv2__Global_Matching__c/fields/ucinn_ascendv2__Filter__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Filter__c</fullName>
    <label>Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>