force-app/main/default/objects/ucinn_ascendv2__Global_Matching__c/fields/ucinn_ascendv2__Matching_Rule__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Matching_Rule__c</fullName>
    <label>Matching Rule</label>
    <referenceTo>ucinn_ascendv2__Matching_Rule__c</referenceTo>
    <relationshipLabel>Global Matchings</relationshipLabel>
    <relationshipName>Global_Matchings_Matching_Rule</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>