force-app/main/default/objects/ucinn_ascendv2__Global_Matching__c/fields/ucinn_ascendv2__Score__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>