force-app/main/default/objects/ucinn_ascendv2__Global_Matching__c/fields/ucinn_ascendv2__Target_Object_Field__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Target_Object_Field__c</fullName>
    <label>Target Object Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>